<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_210sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clipChildren="false"
    android:layoutDirection="ltr"

    android:clipToPadding="false"
    android:background="@android:color/transparent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/topIcon"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:background="@drawable/btn_line_accent_cir"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:translationY="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/result_quiz"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/you_finsih_quiz_in_1_25"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/questions_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/quesstion_number"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_quiz_tv" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/correct_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/correct_answer"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questions_quiz_tv" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/incorrect_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/incorrect_answer_1"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correct_quiz_tv" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/incorrect_quiz_tv">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continueTextView"
                style="@style/PrimaryColoredButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/open_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/closeTextView"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/topIcon"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_white"
        android:padding="@dimen/_2sdp"
        android:src="@drawable/ic_information"
        android:translationY="@dimen/_25sdp" />
</RelativeLayout>