<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_line_accent_cir"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/time_quiz_tv"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/result_quiz"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_img"
            app:layout_constraintBottom_toBottomOf="@+id/user_img"
            app:layout_constraintTop_toTopOf="@+id/user_img" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/you_finsih_quiz_in_1_25"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_username" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/questions_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/quesstion_number"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_quiz_tv" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/correct_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/correct_answer"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questions_quiz_tv" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/incorrect_quiz_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/incorrect_answer_1"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correct_quiz_tv" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/incorrect_quiz_tv">


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>