<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"

    android:background="@color/rose_white">


    <TextView
        android:id="@+id/dialog_tv_add_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/assign_subject"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_tv_add_car"
        android:layout_marginTop="@dimen/_20sdp"
        >



        <TextView
            android:id="@+id/car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/subjects"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_8ssp" />

        <Spinner
            android:id="@+id/spinner_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_spinner"
            android:paddingVertical="@dimen/_10sdp"
            android:pointerIcon="none"
            android:popupBackground="@drawable/background_popup_spinner"
            android:popupElevation="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Add_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/add_subject"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:elevation="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_car_model" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>