<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"

    android:layout_height="match_parent">




    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ic_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/quiz_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_title_login"
                app:layout_constraintVertical_bias="0.5"
                />

            <TextView
                android:id="@+id/tv_title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_18ssp"
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:layout_marginVertical="@dimen/_20sdp"
                app:layout_constraintBottom_toTopOf="@+id/layoutMailLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_logo"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutMailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:hint="@string/email"
                style="@style/TextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@id/layoutPassLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_login"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="@color/colorPrimary"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                style="@style/TextInputLayoutStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/login_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutMailLogin"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="@color/colorPrimary"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/log_in"
                android:textSize="@dimen/_16ssp"
                app:cornerRadius="@dimen/_40sdp"
                app:elevation="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutPassLogin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                >
                <TextView
                    android:id="@+id/have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/have_an_account"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutPassLogin"
                    app:layout_constraintVertical_bias="0.1" />
                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_10ssp"
                    android:paddingVertical="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutPassLogin"
                    app:layout_constraintVertical_bias="0.1" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>